# Font-Ultra-Installer

./: FontInstaller.ps1  FontUltraInstaller.PS1  LICENSE  README.md  ULTRA FONT INSTALLER.code-workspace  build.bat  build_msi.bat  create_release.ps1  settings.json  test_fonts.py
.agent/rules/: code.md
.github/: copilot-instructions.md
legacy_v1/: README.md  Ultra Font Installer.spec  UltraFontInstaller.spec  installer.iss  installer.wxs  release_notes.txt  start.bat  version_info.txt
legacy_v1/locales/: en.json  fr.json
legacy_v1/packaging/: license.rtf
legacy_v1/src/: config.py
legacy_v1/src/rust/: Cargo.toml  build.ps1
legacy_v1/src/rust/src/: main.rs
legacy_v1/src/ui/: __init__.py  comparer.py  components.py  inspector.py  pairing.py  preview.py
locales/: fr.json
packaging/: AppxManifest.xml  README_PACKAGING.md  prepare_layout.bat
src/: config.py  core.py  main.py
src/rust/: README.md
src/ui/: __init__.py  comparer.py  components.py  inspector.py  pages.py  splash.py  typewriter.py
v2_tauri/: README.md  index.html  migration-plan.md  package-lock.json  package.json  performance.md
v2_tauri/.github/workflows/: ci.yml  release.yml
v2_tauri/src/: App.svelte  app.css  main.ts
v2_tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
v2_tauri/src-tauri/src/: font_ops.rs  lib.rs  main.rs  system.rs
v2_tauri/src/components/: DragBoard.svelte  FontCard.svelte  FontSelector.svelte  GlassPanel.svelte  GlyphGrid.svelte  LiquidBlob.svelte  PendingList.svelte  Sidebar.svelte  VariableTitle.svelte  VirtualFontGrid.svelte
(+14 files in other folders)
