[package]
name = "font_tool"
version = "1.0.0"
edition = "2021"
authors = ["JULAI"]

[[bin]]
name = "font_tool"
path = "src/main.rs"

[dependencies]
ttf-parser = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
